<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background = "@color/main_back"
    tools:context=".presentation.auth.SignUpFragment">

    <EditText
        android:id="@+id/edName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint = "@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edLoginUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint = "@string/login"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edPasswordUp"
        android:inputType="textPassword"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint = "@string/password"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/edLoginUp"
        app:layout_constraintTop_toBottomOf="@+id/edLoginUp" />

    <EditText
        android:id="@+id/edRepeatPassword"
        android:inputType="textPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint = "@string/repeat_password"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/edPasswordUp"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordUp" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:text="@string/signup"
        app:backgroundTint="@color/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>